Intermediação de rota para autenticar token
